--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,14 @@ name = "mrcontainer"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+clap = { version = "4.1.1", features = ["derive"] }
+url = { version = "2.3.1", features = ["serde"] }
+serde = { version = "1.0.148", features = ["derive"] }
+serde_json = "1.0.89"
+hex = { version = "0.4.2", features = ["serde"] }
+tracing = "0.1"
+tracing-subscriber = "0.3"
+zip = "0.6.3"
+anyhow = "1.0.68"
+
