--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,6 @@ tracing-subscriber = "0.3"
 zip = "0.6.3"
 anyhow = "1.0.68"
 oci-spec = "0.5.8"
+reqwest = { version = "0.11", features = ["json"] }
+tokio = { version = "1.24.2", features = ["full"] }
+thiserror = "1.0.38"
