--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ tracing-subscriber = "0.3"
 zip = "0.6.3"
 anyhow = "1.0.68"
 oci-spec = "0.5.8"
-reqwest = { version = "0.11", features = ["json"] }
+reqwest = { version = "0.11", features = ["json", "stream"] }
 tokio = { version = "1.24.2", features = ["full"] }
 thiserror = "1.0.38"
+futures-util = "0.3.25"
+rust-crypto = "0.2.36"
