--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,11 @@ tempfile = "3.3.0"
 bytes = "1.4.0"
 dkregistry = "0.5.0"
 regex = "1.10.2"
+oci-distribution = "0.10.0"
+flate2 = "1.0.28"
+tar = "0.4.40"
+generic-array = "1.0.0"
+crypto-common = "0.1.6"
+digest = "0.10.7"
+sha2 = "0.10.8"
+sha1 = "0.10.6"
