--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -24,7 +24,7 @@ jobs:
         mrpackfile: [quilt-simple.mrpack]
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/download-artifact
+      - uses: actions/download-artifact@v4
         with:
           name: binary
       - run: mv target/release/mrpack-contianer /usr/local/bin/mrpack-container
