--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,9 +32,10 @@ digest = "0.10.7"
 sha2 = "0.10.8"
 sha1 = "0.10.6"
 chrono = "0.4.31"
-async-compression = { version = "0.4.8", features = ["tokio", "gzip"] }
+async-compression = { version = "0.4.8", features = ["tokio", "gzip", "xz", "lzma", "zlib", "zstd"] }
 tokio-util = "0.7.10"
 futures = "0.3.30"
 rand = "0.8.5"
 snafu = "0.8.2"
 pin-project-lite = "0.2.14"
+ar = "0.9.0"
