--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -19,6 +19,7 @@ jobs:
           path: target/release/mrpack-container
   e2e:
     runs-on: ubuntu-latest
+    needs: build
     strategy:
       matrix:
         mrpackfile: [quilt-simple.mrpack]
