--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -27,9 +27,11 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/download-artifact@v4
         with:
+          name: binary
           path: /usr/local/bin
           merge-multiple: true
       - run: |
+          ls -l /usr/local/bin
           mrpack-conatiner "tests/mrpacks/${{ matrix.mrpackfile }}" ./output 
           wget "https://piston-data.mojang.com/v1/objects/84194a2f286ef7c14ed7ce0090dba59902951553/server.jar"
           container_id=$(tar cf - -C ./output . | podman load | awk '{ print $3 }')
