--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -33,11 +33,11 @@ jobs:
       - run: |
           chmod +x /usr/local/bin/mrpack-container
           mrpack-container "tests/mrpacks/${{ matrix.mrpackfile }}" ./output 
-          wget "https://piston-data.mojang.com/v1/objects/84194a2f286ef7c14ed7ce0090dba59902951553/server.jar"
+          wget --no-verbose "https://piston-data.mojang.com/v1/objects/84194a2f286ef7c14ed7ce0090dba59902951553/server.jar"
           container_id=$(tar cf - -C ./output . | podman load | awk '{ print $3 }')
           mkdir world
           running_id=$(podman run \
-            --detatch \
+            --detach \
             --publish 25565:25565 \
             --volume "$(pwd)"/world:/var/minecraft/world \
             --volume "$(pwd)"/server.jar:/var/minecraft/server.jar:ro \
