Set permissions of mounted world directory

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -35,12 +35,13 @@ jobs:
           mrpack-container "tests/mrpacks/${{ matrix.mrpackfile }}" ./output 
           wget --no-verbose "https://piston-data.mojang.com/v1/objects/84194a2f286ef7c14ed7ce0090dba59902951553/server.jar"
           container_id=$(tar cf - -C ./output . | podman load | awk '{ print $3 }')
-          mkdir world
+          mkdir /tmp/world
+          chmod a+rwx /tmp/world
           echo "eula=true" > eula.txt
           running_id=$(podman run \
             --detach \
             --publish 25565:25565 \
-            --volume "$(pwd)"/world:/var/minecraft/world \
+            --volume /tmp/world:/var/minecraft/world \
             --volume "$(pwd)"/server.jar:/var/minecraft/server.jar:ro \
             --volume "$(pwd)"/eula.txt:/var/minecraft/eula.txt:ro \
             "$container_id")
