--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -41,18 +41,18 @@ jobs:
           mkdir /tmp/world
           chmod a+rwx /tmp/world
           echo "eula=true" > eula.txt
-          running_id=$(podman run \
+          podman run \
             --detach \
             --publish 25565:25565 \
             --volume /tmp/world:/var/minecraft/world \
             --volume "$(pwd)"/server.jar:/var/minecraft/server.jar:ro \
             --volume "$(pwd)"/eula.txt:/var/minecraft/eula.txt:ro \
-            "$container_id")
+            "$container_id" > running_container_id
       - name: Verify Container is hosting a Minecraft Server 
         run: |
           python3 -m pip install mcstatus
           sleep 60
-          podman logs "$running_id"
+          podman logs $(cat running_container_id)
           mcstatus localhost status
       - name: Verify world save
         run: |
