Always use /usr/local/minecraft/server.jar
This sets the default Mojang Minecraft JAR location to be in
/usr/local/minecraft instead of /var/minecraft.

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -41,7 +41,7 @@ jobs:
             --detach \
             --publish 25565:25565 \
             --volume /tmp/world:/var/minecraft/world \
-            --volume "$(pwd)"/server.jar:/var/minecraft/server.jar:ro \
+            --volume "$(pwd)"/server.jar:/usr/local/minecraft/server.jar:ro \
             --volume "$(pwd)"/eula.txt:/var/minecraft/eula.txt:ro \
             "$container_id" > running_container_id
       - name: Verify Container is hosting a Minecraft Server 
