--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0"
 async-compression = { version = "0.4", features = ["tokio", "gzip", "xz"] }
+async_zip = { version = "0.0.17", features = ["tokio", "tokio-fs", "deflate"] }
 clap = { version = "4.5", features = ["derive"] }
 digest = "0.10"
 futures = "0.3"
@@ -27,4 +28,3 @@ tokio-util = "0.7"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 url = { version = "2.5", features = ["serde"] }
-zip = "2.2"
