--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -61,13 +61,17 @@ jobs:
             echo "Level file not found!"
             false
           fi
-  stability:
+  stability-test:
     # Build the same image multiple times, and make sure they're the same.
     runs-on: ubuntu-latest
     needs: build
     strategy:
       matrix:
         instance: [1, 2, 3]
+    outputs:
+      digest_1: ${{ steps.digest.outputs.digest_1 }}
+      digest_2: ${{ steps.digest.outputs.digest_2 }}
+      digest_3: ${{ steps.digest.outputs.digest_3 }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -82,20 +86,19 @@ jobs:
         run: chmod +x /usr/local/bin/mrpack-container
       - name: Build Container
         run: mrpack-container --output ./output "tests/mrpacks/fabric-simple.mrpack"
-      - name: Compress Container
-        run: tar czf image.tar.gz -C ./output .
-      - uses: actions/upload-artifact@v4
-        with:
-          name: container-${{matrix.instance}}
-          path: image.tar.gz
+      - name: Debug Output for Investigations
+        run: |
+          tree output/
+          ln -l output/blobs/sha256
+          jq <output/index.json
+          jq <"output/blobs/sha256/$(jq <output/index.json -r '.manifests[0].digest' | awk '{split($0,a,":"); print a[2]}')"
+      - name: Report Image Digest
+        id: digest
+        run: echo "digest_${{matrix.instance}}=$(jq <output/index.json '.manifests[0].digest')" >> "$GITHUB_OUTPUT"
   verify-stability:
     runs-on: ubuntu-latest
-    needs: stability
+    needs: stability-test
     steps:
-      - uses: actions/download-artifact@v4
-        with:
-          pattern: container-*
       - name: Compare artifacts
         run: |
-          tree
-          find . -type f -name '*.tar.gz' -exec sha256sum
+          echo '${{ toJSON(needs.stability-test.outputs) }}'
