Add exit 1 to test

--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -100,7 +100,7 @@ jobs:
       # JSON config file.
       - name: Report Image Digest
         id: digest
-        run: echo "digest_${{matrix.instance}}=$(jq <output/index.json '.manifests[0].digest')" >> "$GITHUB_OUTPUT"
+        run: echo "digest_${{matrix.instance}}=$(jq -r <output/index.json '.manifests[0].digest')" >> "$GITHUB_OUTPUT"
   verify-stability:
     runs-on: ubuntu-latest
     needs: stability-test
@@ -108,9 +108,12 @@ jobs:
       - name: Compare artifacts
         run: |
           echo '${{ toJSON(needs.stability-test.outputs) }}'
+          echo '${{ needs.stability-test.outputs.digest_1 }}'
           if [[ '${{ needs.stability-test.outputs.digest_1 }}' != '${{ needs.stability_test.outputs.digest_2 }}' ]]; then
             echo 'Comparsion failure. Containers did not match!'
+            exit 1
           fi
           if [[ '${{ needs.stability-test.outputs.digest_1 }}' != '${{ needs.stability_test.outputs.digest_3 }}' ]]; then
             echo 'Comparsion failure. Containers did not match!'
+            exit 1
           fi
