--- a/.github/workflows/e2e.yaml
+++ b/.github/workflows/e2e.yaml
@@ -32,7 +32,7 @@ jobs:
       - name: Install mrpack-container
         run: chmod +x /usr/local/bin/mrpack-container
       - name: Build Container
-        run: mrpack-container --output ./output "tests/mrpacks/${{ matrix.mrpackfile }}" 
+        run: mrpack-container --arches amd64 --output ./output "tests/mrpacks/${{ matrix.mrpackfile }}"
       - name: Run Container
         run: |
           wget --no-verbose "https://piston-data.mojang.com/v1/objects/84194a2f286ef7c14ed7ce0090dba59902951553/server.jar"
@@ -72,9 +72,12 @@ jobs:
       matrix:
         instance: [1, 2, 3]
     outputs:
-      digest_1: ${{ steps.digest.outputs.digest_1 }}
-      digest_2: ${{ steps.digest.outputs.digest_2 }}
-      digest_3: ${{ steps.digest.outputs.digest_3 }}
+      digest_amd64_1: ${{ steps.digest.outputs.digest_amd64_1 }}
+      digest_arm64_1: ${{ steps.digest.outputs.digest_arm64_1 }}
+      digest_amd64_2: ${{ steps.digest.outputs.digest_amd64_2 }}
+      digest_arm64_2: ${{ steps.digest.outputs.digest_arm64_2 }}
+      digest_amd64_3: ${{ steps.digest.outputs.digest_amd64_3 }}
+      digest_arm64_3: ${{ steps.digest.outputs.digest_arm64_3 }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -88,19 +91,22 @@ jobs:
       - name: Install mrpack-container
         run: chmod +x /usr/local/bin/mrpack-container
       - name: Build Container
-        run: mrpack-container --output ./output "tests/mrpacks/fabric-simple.mrpack"
+        run: mrpack-container --arch amd64 --arch arm64 --output ./output "tests/mrpacks/fabric-simple.mrpack"
       - name: Debug Output for Investigations
         run: |
           tree output/
           ls -l output/blobs/sha256
           jq <output/index.json
           jq <"output/blobs/sha256/$(jq <output/index.json -r '.manifests[0].digest' | awk '{split($0,a,":"); print a[2]}')"
+          jq <"output/blobs/sha256/$(jq <output/index.json -r '.manifests[1].digest' | awk '{split($0,a,":"); print a[2]}')"
       # We can record and then compare just the digest reported in the index.json file. By definition, it will be the
       # SHA256 sum of the manifest of the image, which itself contains the SHA256 sums of each layer tarball and the
       # JSON config file.
-      - name: Report Image Digest
+      - name: Report Image Digests
         id: digest
-        run: echo "digest_${{matrix.instance}}=$(jq -r <output/index.json '.manifests[0].digest')" >> "$GITHUB_OUTPUT"
+        run: |
+          echo "digest_arm64_${{matrix.instance}}=$(jq -r <output/index.json '.manifests[] | select(.platform.architecture == "arm64") | .digest')" >> "$GITHUB_OUTPUT"
+          echo "digest_amd64_${{matrix.instance}}=$(jq -r <output/index.json '.manifests[] | select(.platform.architecture == "amd64") | .digest')" >> "$GITHUB_OUTPUT"
   verify-stability:
     runs-on: ubuntu-latest
     needs: stability-test
@@ -108,11 +114,19 @@ jobs:
       - name: Compare artifacts
         run: |
           echo '${{ toJSON(needs.stability-test.outputs) }}'
-          if [ '${{ needs.stability-test.outputs.digest_1 }}' != '${{ needs.stability-test.outputs.digest_2 }}' ]; then
+          if [ '${{ needs.stability-test.outputs.digest_amd64_1 }}' != '${{ needs.stability-test.outputs.digest_amd64_2 }}' ]; then
             echo 'Comparsion failure. Containers did not match!'
             exit 1
           fi
-          if [ '${{ needs.stability-test.outputs.digest_1 }}' != '${{ needs.stability-test.outputs.digest_3 }}' ]; then
+          if [ '${{ needs.stability-test.outputs.digest_amd64_1 }}' != '${{ needs.stability-test.outputs.digest_amd64_3 }}' ]; then
+            echo 'Comparsion failure. Containers did not match!'
+            exit 1
+          fi
+          if [ '${{ needs.stability-test.outputs.digest_arm64_1 }}' != '${{ needs.stability-test.outputs.digest_arm64_2 }}' ]; then
+            echo 'Comparsion failure. Containers did not match!'
+            exit 1
+          fi
+          if [ '${{ needs.stability-test.outputs.digest_arm64_1 }}' != '${{ needs.stability-test.outputs.digest_arm64_3 }}' ]; then
             echo 'Comparsion failure. Containers did not match!'
             exit 1
           fi
